--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       </ul>
     </div>
     <div id="queueDiv">
-      <span style="position: sticky; top: 0; background: white; text-align: center; display: inline-block; width: 100%; padding: 3px; border-bottom: 1px solid black;">
+      <span style="position: sticky; top: 0; background: white; text-align: center; display: inline-block; width: 100%; padding: 3px 0; border-bottom: 1px solid black;">
         <select id="queue">
           <option>Queue a song here!</option>
           <option id="queue1" value="Barracuda">Barracuda (ID 00)</option>
