--- a/index.html
+++ b/index.html
@@ -846,7 +846,11 @@
           switching = true;
         }
       }
-      for (var x = 0; x < 48; x++) {
+      for (var x = 0; x < 23; x++) {
+        playCountsSpanElems[x].innerHTML = playcounts[x];
+      }
+      playCountsSpanElems[23].innerHTML = playcounts[47];
+      for (var x = 24; x < 47; x++) {
         playCountsSpanElems[x].innerHTML = playcounts[x];
       }
       switching = true;
