--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         margin: 0;
         overflow: hidden;
       }
+      :focus {
+        outline: 1px solid blue;
+      }
       button {
         -webkit-appearance: none;
         background: white;
@@ -488,7 +491,7 @@
           document.getElementById("album").href = "Album-Art/Music Albums/Caps On, Hats Off.jpg";
           break;
         case 3:
-          document.getElementById("album").href = "Album-Art/Music Albums/Checkpoint.jpg";
+          document.getElementById("album").href = "Album-Art/Music Albums/Monstercat 027 - Cataclysm.jpg";
           break;
         case 7:
           document.getElementById("album").href = "Album-Art/Music Albums/Cool Friends.jpg";
@@ -503,16 +506,16 @@
           document.getElementById("album").href = "Album-Art/Music Albums/Ember.jpg";
           break;
         case 15:
-          document.getElementById("album").href = "Album-Art/Music Albums/Final Boss.jpg";
+          document.getElementById("album").href = "Album-Art/Music Albums/Monstercat 023 - Voyage.jpg";
           break;
-        case 8: case 11: case 37: case 48:
+        case 8: case 11: case 37: case 47:
           document.getElementById("album").href = "Album-Art/Music Albums/Ground Zero.jpg";
           break;
         case 24:
           document.getElementById("album").href = "Album-Art/Music Albums/Lunaria.JPG";
           break;
         case 26:
-          document.getElementById("album").href = "Album-Art/Music Albums/Monstercat - Best of 2014.jpg";
+          document.getElementById("album").href = "Album-Art/Music Albums/Monstercat 016 - Expedition.jpg";
           break;
         case 36:
           document.getElementById("album").href = "Album-Art/Music Albums/Monstercat 014 - Discovery.jpg";
@@ -545,13 +548,13 @@
           document.getElementById("album").href = "Album-Art/Music Albums/The Invasion.jpg";
           break;
         case 43:
-          document.getElementById("album").href = "Album-Art/Music Albums/Try This.jpg";
+          document.getElementById("album").href = "Album-Art/Music Albums/Monstercat 022 - Contact.jpg";
           break;
         case 12:
           document.getElementById("album").href = "Album-Art/Music Albums/Ultimate Collection.jpg";
           break;
         case 20:
-          document.getElementById("album").href = "Album-Art/Music Albums/HYPE.JPG";
+          document.getElementById("album").href = "Album-Art/Music Albums/Monstercat 030 - Finale.JPG";
           break;
         case 30:
           document.getElementById("album").href = "Album-Art/Music Albums/Shawn Daley.JPG";
